# RM_UI_Generator

./: .gitignore  CMakeLists.txt  README.md  addUITemplate.cmake  designer.cpp  main.cpp
.github/workflows/: release.yaml
generators/: dynamic.cpp  generators.hpp  static.cpp
lib/: lib.hpp.in
lib/dynamic/: ui_interface.h  ui_types.h
lib/static/: ui_types.h
objects/: arc.hpp  ellipse.hpp  enum.hpp  float.hpp  line.hpp  number.hpp  object.hpp  objects.cpp  objects.hpp  rect.hpp  round.hpp  text.hpp
template/dynamic/: ui_frame_c.hpp  ui_frame_h.hpp  ui_h.hpp
template/static/: ui_frame_c.hpp  ui_frame_h.hpp  ui_h.hpp
test/: .gitignore  CMakeLists.txt  ui.rmui
test/dynamic/: main.cpp
test/dynamic/dynamic_ui/: ui_interface.h  ui_types.h
test/static/: main.cpp
test/static/static_ui/: ui_interface.h  ui_types.h
utils/: preLoad.js  utils.cpp  utils.hpp
